[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Remy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez={version="0.5.1"}
specs ={ version = "*", features = ["specs-derive"] }

#https://sokoban.iolivia.me/c01-01-setup.html