[package]
name = "ria_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode="1"
byteorder = "1"
crc = "1"
serde = "1"
serde_derive = "1"


[lib]
name = "ria_lib"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/bin/akv_mem.rs"
