[package]
name = "ria_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"

[package.metadata.bootimage]
run-command = ["qemu-system-x84_64","-drive" , "format=raw,file={}"]
# "C:\Program Files\qemu\qemu-system-x84_64.exe
#
# use this command after build
# cargo build ; qemu-system-x86_64 -drive format=raw,file=target\ria_os\debug\bootimage-ria_os.bin